Print Github refs

--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -37,6 +37,16 @@ jobs:
       - name: Add SHORT_SHA env property with commit short sha
         run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
+      - name: Print github refs
+        run: |
+            echo "base_ref: ${{ github.base_ref }}"
+            echo "head_ref: ${{ github.head_ref }}"
+            echo "action_ref: ${{ github.action_ref }}"
+            echo "ref: ${{ github.ref }}"
+            echo "ref_type: ${{ github.ref_type }}"
+            echo "ref_name: ${{ github.ref_name }}"
+            echo "event: ${{ github.event }}"
+
       - name: Push latest only if tagging from main
         if: github.ref == 'refs/heads/main'
         run: |
