--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -11,6 +11,7 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
       - v[0-9]+.[0-9]+.[0-9]+-*
+  release:
 
 permissions:
   contents: read
@@ -41,7 +42,8 @@ jobs:
       - name: Push latest only if tagging from main
         if: env.PUSH_LATEST == 'true'
         run: |
-            echo "push latest + tag : ${{ github.ref }}" 
+            echo "push latest + tag : ${{ github.ref }}"
+            echo "release tag_name: ${{ github.event.release.tag_name }}" 
 
       - name: Push only the tag if tagging from a branch
         if: env.PUSH_LATEST == 'false'
