--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -4,13 +4,9 @@ env:
   TAG_FMT: "^refs/tags/(((.?[0-9]+){3,4}))$"
   DOCKER_BUILDKIT: 0
   COMPOSE_DOCKER_CLI_BUILD: 0
-  PUSH_LATEST: ${{ github.ref == 'refs/heads/main' || github.event_name == 'release' }}
 
 on:
-  push:
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+
-      - v[0-9]+.[0-9]+.[0-9]+-*
+  release:
 
 permissions:
   contents: read
@@ -38,7 +34,8 @@ jobs:
       - name: Add SHORT_SHA env property with commit short sha
         run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
-      - name: Push only the tag if tagging
-        if: env.PUSH_LATEST == 'false'
+      - name: Push latest + tag only if releasing
+        if: env.PUSH_LATEST == 'true'
         run: |
-            echo "push tag only: ${{ github.ref }}"
+            echo "push latest + tag : ${{ github.ref }}"
+            echo "release tag_name: ${{ github.event.release.tag_name }}" 
