--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -1,4 +1,4 @@
-name: Docker build on tag
+name: Docker build on release
 env:
   DOCKER_CLI_EXPERIMENTAL: enabled
   TAG_FMT: "^refs/tags/(((.?[0-9]+){3,4}))$"
