--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -35,8 +35,14 @@ jobs:
       - name: Add SHORT_SHA env property with commit short sha
         run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
 
+      - name: Get commit SHA of tag
+        id: commit_sha
+        run: echo "::set-output name=commit_sha::${{ github.event.release.target_commitish }}"
+      
+      - name: Print commit SHA
+        run: echo "Commit SHA of the tag is ${{ steps.commit_sha.outputs.commit_sha }}"
+
       - name: Push latest + tag only if releasing
-        if: env.PUSH_LATEST == 'true'
         run: |
             echo "push latest + tag : ${{ github.ref }}"
             echo "release tag_name: ${{ github.event.release.tag_name }}" 
